fix z-index

--- a/style.css
+++ b/style.css
@@ -1008,12 +1008,14 @@ font-size: 10px;
   margin: 0px;
   padding: 0px;
   text-align: center;
+  z-index: -1;
 }
 
 .hero-content .svg-cont img{
   display: block;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 /* Features Connections Section */
 
@@ -1452,6 +1454,7 @@ align-items: center;
   
   position: fixed;
   margin-bottom: 50px;
+  z-index: 10000;
 }
 
  /* .download button{
@@ -1604,6 +1607,7 @@ align-items: center;
   text-align: center;
   bottom: 40px;
   right: 10px;
+  z-index: 10000;
   
 
 }
@@ -1619,18 +1623,21 @@ align-items: center;
   align-items: center;
   font-weight: 500;
   font-family: "Cabin", sans-serif;
-  
+  z-index: 10000;
 
 }
 .download button i{
   font-size: 15px;
   margin-right: 10px;
+  color: #088F8F;
+  z-index: 10000;
 }
 .download button:hover{
   background-color: transparent;
   color: #172727;
   border: none;
   outline: none;
+  
 } 
 
 .dropdown-content{
@@ -1638,6 +1645,7 @@ align-items: center;
   height: 250px;
   width: 150px;
   margin: auto;
+  z-index: 10000;
 
 }
 .dropdown-content a{
@@ -1646,10 +1654,13 @@ align-items: center;
   display: block;
   margin: auto;
   text-align: center;
+  z-index: 10000;
 
 }
 .dropdown-content a i{
   padding-right: 5px;
+  color: #088F8F;
+  z-index: 10000;
 }
 
 .show{
